--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,16 @@ services:
   homepage360:
     build: .
     container_name: homepage360
-    ports:
-      - "8080:80"
     restart: always
+    networks:
+      - web
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.homepage360.rule=Host(`votre-domaine.com`)"
+      - "traefik.http.routers.homepage360.entrypoints=websecure"
+      - "traefik.http.routers.homepage360.tls.certresolver=myresolver"
+      - "traefik.http.services.homepage360.loadbalancer.server.port=80"
+
+networks:
+  web:
+    external: true
