--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,9 @@ services:
     container_name: homepage360
     restart: always
     ports:
-      - "8080:80"
+      - "3000:3000"
+    environment:
+      - MONITOR_API_KEY=${MONITOR_API_KEY:-change-me-in-production}
     networks:
       - web
     labels:
@@ -15,7 +17,7 @@ services:
       - "traefik.http.routers.homepage360.rule=Host(`votre-domaine.com`)"
       - "traefik.http.routers.homepage360.entrypoints=websecure"
       - "traefik.http.routers.homepage360.tls.certresolver=myresolver"
-      - "traefik.http.services.homepage360.loadbalancer.server.port=80"
+      - "traefik.http.services.homepage360.loadbalancer.server.port=3000"
 
 networks:
   web:
