--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - "3000:3000"
     environment:
       - MONITOR_API_KEY=${MONITOR_API_KEY:-change-me-in-production}
+      - NODE_ENV=production
     networks:
       - web
     labels:
